# niman-webcam

./: .gitignore  main.py  pyproject.toml
src/storage/: api.py
